--- a/Index.html
+++ b/Index.html
@@ -138,6 +138,11 @@
                 <h3>Teamwork & Community</h3>
                 <p>Highlighting skills in teamwork and a commitment to shared goals within the student community.</p>
             </div>
+<div class="project-card">
+                <img src="82f5a2ac-abed-4630-a066-1e8ad414f94a.jpeg" alt="internship.">
+                <h3>Student Intern / On-the-Job Training (OJT)</h3>
+                <p>Gained practical experience in a professional IT environmentAssisted with daily technical support tasks and system maintenance</p>
+            </div>
         </div>
     </div>
         </section>
