--- a/Index.html
+++ b/Index.html
@@ -153,7 +153,7 @@
                 <div class="social-links">
                     <a href="mailto:ugayjannie@gmail.com" target="_blank"><i class="fas fa-envelope"></i> Email:ugayjannie@gmailcom</a>
                    <a href="tel:+639386960401"><i class="fas fa-phone"></i> Phone:+639386960401</a>
-                    <a href="linkedin:www.linkedin.com/in/jannie-ugay-a3528537b" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a>
+                    <a href="linkedin:https://www.linkedin.com/in/jannie-ugay-a3528537b" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a>
                     <a href="Github:https://github.com/jannieugay" target="_blank"><i class="fab fa-github"></i> GitHub</a>
                 </div>
               
