--- a/Index.html
+++ b/Index.html
@@ -155,7 +155,7 @@
                    <a href="tel:+639386960401"><i class="fas fa-phone"></i> Phone:+639386960401</a>
                     <a href="linkedin:https://www.linkedin.com/in/jannie-ugay-a3528537b" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a>
                     <a href="Github:https://github.com/jannieugay" target="_blank"><i class="fab fa-github"></i> GitHub</a>
-                     <a href="facebook:https://web.facebook.com/jannie.ugay.92 target="_blank"><i class="fab fa-facebook"></i>facebook</a>      
+                     <a href="facebook:https://www.facebook.com/jannie.ugay.92"target="_blank"><i class="fab fa-facebook"></i>facebook</a>      
             </div>
         </section>
     </main>
