--- a/Index.html
+++ b/Index.html
@@ -12,7 +12,7 @@
     <header class="header">
         <div class="container">
            <h1 class="logo">JANNIE  UGAY </h1>
-            <p class="title">Technical Support,Network engineer,Fiel service Technician</p>
+            <p class="title">Technical Support Specialist,Network engineer,Field service Technician</p>
             <nav class="navbar">
                 <ul>
                     <li><a href="#about">About</a></li>
