--- a/Index.html
+++ b/Index.html
@@ -10,8 +10,10 @@
 </head>
 <body>
     <header class="header">
-        <div class="container">
-           <h1 class="logo">JANNIE  UGAY </h1>
+     <div class="container header-content">
+        <img src="profile.jpeg" alt="Jannie T. Ugay profile picture" class="profile-header-img">
+        <div>          
+            <h1 class="logo">JANNIE  UGAY </h1>
             <p class="title">Technical Support Specialist,Network engineer,Field service Technician</p>
             <nav class="navbar">
                 <ul>
