--- a/Index.html
+++ b/Index.html
@@ -11,7 +11,7 @@
 <body>
     <header class="header">
      <div class="container header-content">
-        <img src="profile .jpeg" alt="Jannie T. Ugay profile picture" class="profile-header-img">
+        <img src="jannie-ugay profile.jpeg" alt="Jannie T. Ugay profile picture" class="profile-header-img">
         <div>          
             <h1 class="logo">JANNIE  UGAY </h1>
             <p class="title">Technical Support Specialist,Network engineer,Field service Technician</p>
