--- a/Index.html
+++ b/Index.html
@@ -10,8 +10,7 @@
 </head>
 <body>
     <header class="header">
-     <div class="container header-content">
-        <img src="jannie-ugay profile.jpeg" alt="Jannie T. Ugay profile picture" class="profile-header-img">
+     <div class="container">
         <div>          
             <h1 class="logo">JANNIE  UGAY </h1>
             <p class="title">Technical Support Specialist,Network engineer,Field service Technician</p>
