--- a/Index.html
+++ b/Index.html
@@ -35,7 +35,8 @@
         </div>
 
                 <h2>About Me</h2>
-                <p>I'm Jannie T. Ugay. I specialize in Technical Troubleshooting, with experience in System Maintenance. I'm passionate about my skills, and I help my colleagues achieve their goals.Right now, I'm looking for opportunities to collaborate and I'd love to connect with people who share the same visionI am adaptable, patient, and detail-oriented, enabling me to approach technical challenges with focus and efficiency. I place great importance on teamwork and effective communication, which I believe are essential in delivering excellent support services. With these strengths, I am confident in my ability to contribute meaningfully to the success of your company’s IT operations..</p>
+               <p>I'm Jannie T. Ugay. I specialize in Technical Troubleshooting, with experience in System Maintenance. I'm passionate about my skills, and I help my colleagues achieve their goals.Right now, I'm looking for opportunities to collaborate and I'd love to connect with people who share the same visionI am adaptable, patient, and detail-oriented, enabling me to approach technical challenges with focus and efficiency. I place great importance on teamwork and effective communication, which I believe are essential in delivering excellent support services. With these strengths, I am confident in my ability to contribute meaningfully to the success of your company’s IT operations..</p>
+                <p>Beyond my technical expertise, I am highly adaptable, patient, and detail-oriented. I value teamwork and effective communication, which I believe are essential in delivering quality support services. With these qualities, I am confident that I can contribute to maintaining efficient IT operations in your company.</p>
             </div>
         </section>
 
